--- a/config/config.ini
+++ b/config/config.ini
@@ -6,8 +6,8 @@ browserName = Chrome
 #browserName = IE
 
 [testServer]
-URL = https://www.baidu.com
 #URL = https://k1-test.gengee.com/cn/#/login
+URL = https://ks.gengee.com/cn/#/login
 
 # 中括号包裹起来的部分叫section
 # 这个符号是注释符
